added about block and projects text to home page

--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,8 @@ html, body{
   background-color: rgb(215, 215, 203);
   overflow-x: hidden;
 }
-#homeContainer{
-  height: 100vh;
-}
+
+/* Header and Footer */
 #header{
   height: 9vh;
   background:linear-gradient(rgba(0, 45, 30, 0.457), rgb(215, 215, 203) );
@@ -37,6 +36,19 @@ html, body{
 #homeBtn{
   margin-left: 20px;
 }
+#footer{
+  width: 100%;
+  height: 10vh;
+  background-color: rgb(164, 96, 107);
+  position: absolute;
+}
+
+
+/* Home Page */
+#homeContainer{
+  height: 100vh;
+}
+
 #homeText{
   font-weight: 100;
   font-size: 16px;
@@ -47,15 +59,11 @@ html, body{
   left: 18vw;
   line-height: 30px;
 }
-#footer{
-  width: 100%;
-  height: 10vh;
-  background-color: rgb(164, 96, 107);
-  position: absolute;
-}
+
 #scrollContainer{
   height: 10vh;
 }
+
 #scrollTextPrimary, #scrollTextSecondary{
   color: rgb(90, 90, 90);
   position: relative;
@@ -64,11 +72,13 @@ html, body{
   height: 10vh;
   width: max-content;
 }
+
 #scrollTextPrimary{
   display: flex;
   justify-content: space-around;
   animation: my-animation 15s linear infinite;
 }
+
 #scrollTextSecondary{
   animation: my-animation 15s linear infinite; 
   position: relative;
@@ -84,4 +94,14 @@ html, body{
   100% {
     transform: translate(-100%);
   }
+}
+
+#aboutBlock{
+  background-color: rgb(207, 147, 117);
+  height: 80vh;
+}
+
+#projectBlock{
+  color: rgb(164, 96, 107);
+  height: 60vh;
 }
