--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,8 @@ html, body{
 }
 #footer{
   width: 100%;
-  height: 10vh;
-  background-color: rgb(164, 96, 107);
+  height: 15vh;
+  background:linear-gradient(rgb(207, 147, 117), rgb(164, 96, 107) );
   position: absolute;
 }
 
